--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,11 @@
   text-decoration: underline;
   font-weight: 700;
 }
+
+.content {
+    max-width: 1270px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+}
